# ai_pdf_research

./: .gitignore  README.md  pyproject.toml
src/ai_pdf_research/: app.py  chains.py  ingest.py
src/ai_pdf_research/pages/: 1_pdf_research.py  2_agents_playground.py
