[project]
name = "ai-pdf-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Subin C",email = "subin8899@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "pypdf (>=5.7.0,<6.0.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "openai (>=1.93.0,<2.0.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "protobuf (>=3.20.0,<4.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)"
]

[tool.poetry]
packages = [{include = "ai_pdf_research", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
